  more likely to find artifacts throughout the dungeon, due to many new artifact
  types. On the other hand, adding artifacts made the Astral Plane slightly more
  difficult, since player monsters now have a greater number of artifacts to
  be generated with.
- Summon nasties has been expanded to accommodate new monsters.

Quest Nemesis Changes
- Lord Surtur can create level-shaking earthquakes when he attacks.
- Nalzok now has a much higher chance of summoning other demons on hit than
  demons found in gehennom.
- Ixoth's claw attack can stun the opponent.
- The Dark One now casts spells twice per turn.
- Thoth Amon now casts a mix of clerical and mage spells. The changes to monster
  sacrifice at altars could also cause some interesting effects.
- Ixoth and the Chromatic Dragon are both affected by dragon changes, and as
  such are potentially nastier.

New Races
- Merfolk: Start with swimming, and eventually learn to breath water. This is
  made up for by low maxed stats.
- Werewolf: Similar to humans, but with permanent, incurable lycanthropy.
  Can be considered a "challenge race."

New Roles
- Cartomancer: A spellcaster with a focus on spell cards (scrolls). They start
  with a number of scrolls, and whenever they use one it has a chance of not
  being consumed. Unfortunately, their skill selection is awful, and they
  receive a harsh alignment penalty for using magic markers (you feel guilty
  for forging a card). The entire role affectionately parodies various trading
  card games and the shows that center on them.
- Dragonmaster: This role is similar to that of a knight, but they begin with
  a pet baby dragon instead of a pony, which they can eventually raise into a
  powerful steed. Due to being raised by dragons, they are averse to wearing
  dragon scales and dragon scale mail, which makes their midgame very difficult.
  Their quest artifact is Sharur, a talking ornate mace.

New Artifacts
- Gungnir
- Gleipnir
- Gae Bulg
- Gae Dearg
- Gae Buidhe