@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/3/18 by NullCGT */
+/* Edited on 4/4/18 by NullCGT */
 
 #include "config.h"
 #include "permonst.h"
@@ -1921,13 +1921,20 @@ struct permonst _mons2[] = {
         SIZ(WT_HUMAN, 20, MS_HUMANOID, MZ_HUMAN), MR_POISON, 0,
         M1_HUMANOID | M1_OMNIVORE | M1_POIS | M1_TPORT, M2_HOSTILE,
         M3_INFRAVISIBLE, CLR_CYAN),
-   MON("amalgamation", S_QUANTMECH, LVL(10, 9, 5, 10, 0),
+    MON("amalgamation", S_QUANTMECH, LVL(10, 9, 5, 10, 0),
         (G_GENO | G_NOCORPSE | 4),
         A(ATTK(AT_WEAP, AD_PHYS, 1, 8), ATTK(AT_CLAW, AD_PHYS, 1, 8),
         NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
         SIZ(WT_HUMAN, 20, MS_HUMANOID, MZ_HUMAN), MR_POISON, 0,
         M1_AMORPHOUS | M1_OMNIVORE | M1_POIS, M2_HOSTILE | M2_NOPOLY,
         0, CLR_WHITE),
+    MON("bad clone", S_QUANTMECH, LVL(20, 15, -5, 50, 0),
+         (G_GENO | G_NOCORPSE | 2),
+         A(ATTK(AT_WEAP, AD_PHYS, 2, 8), ATTK(AT_CLAW, AD_PHYS, 2, 8),
+         NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
+         SIZ(2000, 350, MS_HUMANOID, MZ_HUGE), MR_POISON, 0,
+         M1_AMORPHOUS | M1_OMNIVORE | M1_POIS, M2_HOSTILE | M2_NOPOLY,
+         0, HI_LORD),
     /*
      * Rust monster or disenchanter
      */
