@@ -67,6 +67,7 @@ General Changes
   difficult, since player monsters now have a greater number of artifacts to
   be generated with.
 - Summon nasties has been expanded to accommodate new monsters.
+- New demon lords!
 
 Quest Nemesis Changes
 - Lord Surtur can create level-shaking earthquakes when he attacks.
@@ -208,6 +209,8 @@ New Monsters
 - T-Rex
 - Banshee
 - Elder Kraken
+- Amalgamation
+- Bad Clone
 - Cartomancer (Player Monster)
 - Dragonmaster (Player Monster)
 - Drake (Dragonmaster Quest)
@@ -223,4 +226,4 @@ New Unique Monsters
 - Dal Zethire
 - Drakemother
 - Slipscale the Betrayer
-- dragon of the Betrayer
+- Dragon of the Betrayer
